@@ -42,6 +42,7 @@ import java.util.*;
 import java.io.*;
 import java.nio.file.Paths;
 import java.nio.file.Path;
+import java.util.stream.*;
 
 class Env {
 
@@ -62,19 +63,22 @@ class Env {
     static void init(String connectSpec, boolean openNow, int flags, boolean trackVthreads, String extraOptions, String mainClass) {
         connection = new VMConnection(connectSpec, flags, trackVthreads, extraOptions);
         Env.mainClass = mainClass;
-        if (mainClass.endsWith(".java")) {
-          Path path = Paths.get(mainClass);
-          File fileLocation = path.toFile();
-          if (fileLocation.exists()) {
-            System.out.println("Setting sourcepath as: " + fileLocation.getParent());
-            setSourcePath(fileLocation.getParent().toString());
-          } else if (fileLocation.isDirectory()) {
-            System.err.println("Main file is a directory: " + path);
-            System.exit(1);
-          } else {
-            System.err.println("Could not find file in path " + path);
-            System.exit(1);
-          }
+        Path path = Path.of("").toAbsolutePath();
+        File fileLocation = path.toFile();
+
+        if (fileLocation.exists()) {
+          List<String> sourcePaths = new ArrayList();
+          sourcePaths.add(fileLocation.toString());
+          sourcePaths.add(fileLocation.toString() + "/src/");
+          sourcePaths.add(fileLocation.toString() + "/src/main/java/");
+          System.out.println("Setting sourcepath as: " + sourcePaths.toString());
+          setSourcePath(sourcePaths);
+        } else if (fileLocation.isDirectory()) {
+          System.err.println("Main file is a directory: " + path);
+          System.exit(1);
+        } else {
+          System.err.println("Could not find file in path " + path);
+          System.exit(1);
         }
         if (!connection.isLaunch() || openNow) {
             connection.open();
@@ -125,6 +129,10 @@ class Env {
 
     static String getSourcePath() {
         return sourceMapper.getSourcePath();
+    }
+
+    static List<String> getSourceFiles() {
+      return sourceMapper.getSourceFiles();
     }
 
     private static List<String> excludes() {
